syntax = "proto3";

package proto.services;

option java_multiple_files = true;
option java_package = "proto.services.usuario";

import "google/protobuf/empty.proto";
import "dtos/usuario_dto.proto";

message IdUsuarioRequestProto {
  int64 idUsuario = 1;
}

message StringResponseProto {
  string mensaje = 1;
}

message ListarUsuariosResponseProto {
  repeated proto.dtos.UsuarioProto usuarios = 1;
}

service UsuarioService {
  rpc CrearUsuario (proto.dtos.CrearUsuarioProto) returns (proto.dtos.CrearUsuarioProto);
  rpc Login (proto.dtos.LoginUsuarioProto) returns (proto.dtos.LoginUsuarioResponseProto);
  rpc DesactivarUsuario (IdUsuarioRequestProto) returns (StringResponseProto);
  rpc ModificarUsuario (proto.dtos.ModificarUsuarioProto) returns (proto.dtos.ModificarUsuarioProto);
  rpc ListarUsuarios (google.protobuf.Empty) returns (ListarUsuariosResponseProto);
  rpc TraerUsuario (IdUsuarioRequestProto) returns (proto.dtos.CrearUsuarioProto);
  rpc ReactivarUsuario (IdUsuarioRequestProto) returns (StringResponseProto);
}